no more failure

--- a/_posts/2018-01-30-proj-test.markdown
+++ b/_posts/2018-01-30-proj-test.markdown
@@ -1,7 +1,7 @@
 ---
-title: ":ramen: Indigo, minimalist jekyll theme"
+title: "Trial"
 layout: post
-date: 2016801-30 22:10
+date: 2018-01-30
 tag: jekyll
 projects: true
 hidden: true # don't count this post in blog pagination
@@ -26,8 +26,3 @@ What has inside?
 - Travis
 - No JS
 - [98/100](https://developers.google.com/speed/pagespeed/insights/?url=http%3A%2F%2Fsergiokopplin.github.io%2Findigo%2F)
-
----
-
-[Check it out](http://sergiokopplin.github.io/indigo/) here.
-If you need some help, just [tell me](http://github.com/sergiokopplin/indigo/issues).
